# cuda-reduce-max-with-index

./: CMakeLists.txt  ManagedAllocator.hpp  MaxElement.cpp  Operations.h  Process.h  README.MD  ReduceMaxIdxOptimizedShared.h  ReduceMaxIdxOptimizedWarp.h  ReduceMaxIdxOptimizedWarpShared.h  main.cu
src/: ReduceMaxIdx.h  ReduceMaxIdxOptimized.h  ReduceMaxIdxOptimizedBlocks.h
